deploy/login/dex-k8s-authenticator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-k8s-authenticator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex-k8s-authenticator
  template:
    metadata:
      labels:
        app: dex-k8s-authenticator
    spec:
      containers:
        - name: dex-k8s-authenticator
          image: mintel/dex-k8s-authenticator:1.4.0
          args: [ "--config", "/app/config.yaml" ]
          ports:
            - containerPort: 5555
          volumeMounts:
            - name: config
              subPath: config.yaml
              mountPath: /app/config.yaml
      volumes:
        - name: config
          configMap:
            name: dex-k8s-authenticator
---
apiVersion: v1
kind: Service
metadata:
  name: dex-k8s-authenticator
spec:
  selector:
    app: dex-k8s-authenticator
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-k8s-authenticator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: http://oauth2-proxy.local.host/oauth2/start?rd=$scheme://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization,X-Auth-Request-Email
spec:
  rules:
    - host: login.local.host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex-k8s-authenticator
                port:
                  number: 5555
